[tool.poetry]
name = "waterloo-capstone-rawlsian-agents"
version = "0.1.0"
description = "waterloo_capstone_environment"
authors = ["Sergio Ferro <Sergio_ferro@epam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.35.63"
botocore = "^1.35.63"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
